--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -878,7 +878,7 @@ section {
 #academy {
   padding: 60px 0;
   text-align: center;
-  background-image: url(../img/wp2757874.gif) ;
+  background-image: url(../img/optimize-cyber.gif) ;
 }
 #academy .box {
   padding: 30px;
