--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,8 +412,8 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   position: relative;
-  /*background: #f5f8fd url("../img/") left bottom  no-repeat; 
-  background-size: ;*/ 
+  background: #f5f8fd url("../img/intro-bg.jpg") center  no-repeat; 
+  background-size: ;
 }
 
 @media (max-width: 767px) {
