--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-nav a:hover, .main-nav .active > a, .main-nav li:hover > a {
-  color: #1bb1dc;
+  color: #dc1b3b;
   text-decoration: none;
 }
 
@@ -264,11 +264,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   font-weight: 500;
   text-transform: none;
-  color: #065e77;
+  color: #04152e;
 }
 
 .main-nav .drop-down ul a:hover, .main-nav .drop-down ul .active > a, .main-nav .drop-down ul li:hover > a {
-  color: #1bb1dc;
+  color: #dc1b1b;
 }
 
 .main-nav .drop-down > a:after {
@@ -366,10 +366,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  line-height: 1;
+  line-height: 4;
   cursor: pointer;
-  text-align: right;
-  
+  text-align: right; 
 }
 
 .mobile-nav-toggle i {
