--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62,7 +62,7 @@ html, body{
 }
 
 .bg-purple{
-    background: url(http://salehriaz.com/404Page/img/bg_purple.png);
+    background: url(/assets/img/bg_purple.png);
     background-repeat: repeat-x;
     background-size: cover;
     background-position: left top;
@@ -229,7 +229,7 @@ li a:hover {
 }
 
 .stars{
-    background: url(http://salehriaz.com/404Page/img/overlay_stars.svg);
+    background: url(/assets/img/overlay_stars.svg);
     background-repeat: repeat;
     background-size: contain;
     background-position: left top;
