--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62,7 +62,7 @@ html, body{
 }
 
 .bg-purple{
-    background: url(/assets/img/bg_purple.png);
+    background: url(/assets/img/ethical-hacking.png);
     background-repeat: repeat-x;
     background-size: cover;
     background-position: left top;
